# Lan-Media-Hub

./: .gitignore  CLAUDE.md  Cargo.toml
crates/config/: Cargo.toml
crates/config/src/: lib.rs  persistence.rs  settings.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/db/: mod.rs  pool.rs  queries.rs  schema.rs
crates/core/src/index/: media.rs  mod.rs  scanner.rs  watcher.rs
crates/core/src/share/: manager.rs  mod.rs  types.rs
crates/http/: Cargo.toml
crates/http/src/: auth.rs  lib.rs  server.rs
crates/http/src/assets/: mobile_ui.html
crates/http/src/handlers/: mod.rs  stream.rs
crates/http/src/routes/: api.rs  auth.rs  browse.rs  info.rs  mod.rs  share.rs  thumbnail.rs  transcode.rs  web_ui.rs
docs/superpowers/specs/: 2026-05-26-lan-media-hub-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/components/: TrayPopup.vue
frontend/src/stores/: settings.ts  share.ts
frontend/src/styles/: main.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  commands.rs  main.rs
web-ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web-ui/src/: App.vue  main.ts
web-ui/src/views/: BrowseView.vue  HomeView.vue
