[package]
name = "lan-media-hub-core"
description = "Core business logic for Lan Media Hub"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
sqlx.workspace = true
notify.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
path-clean.workspace = true
walkdir = "2.5"